--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "create-new-block": "cd packages/forge/cli && pnpm start"
   },
   "devDependencies": {
+    "@tolgee/cli": "1.3.2",
     "cross-env": "7.0.3",
     "cz-emoji": "1.3.2-canary.2",
     "husky": "8.0.3",
     "prettier": "2.8.8",
-    "turbo": "1.10.12",
-    "@tolgee/cli": "1.3.2"
+    "turbo": "1.10.12"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-emoji"
     }
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@8.6.12",
+  "dependencies": {
+    "got": "12.6.0",
+    "node": "^20.10.0"
+  }
 }
